add banner pics, change first text copy

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Looking for the best demolition and junk removal service in Ottawa? Whether it is indoors or outdoors, we take care of your junk removal projects. Pool removal, shed removal, material disposal. ">
     <link rel="shortcut icon" href="img/axblogo2.svg" type="image/x-icon">
-    <link rel="preload" fetchpriority="high" href="img/home-1/slider12.jpg" as="image" type ="image">
+    <link rel="preload" fetchpriority="high" href="/img/home-1/slider2.jpg" as="image" type ="image">
     
     <!-- Bootstrap CSS -->
     <style type="text/css">
@@ -391,15 +391,16 @@
                     <div class="row">
                         <div class="col-lg-7">
                             <div class="con_about_img wow fadeInLeft" data-wow-delay="0.2s">
-                                <img data-parallax='{"x": 10, "y": 20}' src="img/home-1/about.jpg" alt="Dump truck disposing its waste material in landfill">
+                                <img data-parallax='{"x": 10, "y": 20}' src="/img/home-1/2025-pics/banner.jpg" alt="Dump truck disposing its waste material in landfill">
                             </div>
                         </div>
                         <div class="col-lg-5 d-flex align-items-center">
                             <div class="con_about_text">
                                 <h6 class="con_title_top wow fadeInUp" data-wow-delay="0.2s" >ABOUT US</h6>
                                 <h2 class="con_title wow fadeInUp" data-wow-delay="0.3s">DEMOLITION & JUNK REMOVAL</h2>
-                                <p class="con_p wow fadeInUp" data-wow-delay="0.4s"> Did you recently purchase or inherit a home or a place or a business in Ottawa and are overwhelmed with its contents? Whether it’s indoors or outdoors, we can remove and dismantle anything from your space . We specialize in hoarding cleanups, years of accumulated materials in barns, sheds or basements. No job is too complex, our team is experienced to deal with even the worst case scenarios. Don’t hesitate, we can help!</p>
-                                <p id="con_p2" class="con_p wow fadeInUp" data-wow-delay="0.4s">As a specialized team, we excel in expertly dismantling and removing any unwanted structures or items from your residential or commercial premises. With our unwavering expertise and commitment, we turn your visions into reality with precision and efficiency. Contact us to discuss your project needs and experience the difference with our team's expertise and personalized approach.</p>
+                                <p class="con_p wow fadeInUp" data-wow-delay="0.4s"> At AxB Demolition, our experienced team specializes in a wide range of demolition services, including full and partial gutting, asbestos removal, fire damage remediation, and thorough construction site cleanups. What sets us apart is our unwavering commitment to precision and quality. </p>
+                                <p id="con_p2" class="con_p wow fadeInUp" data-wow-delay="0.4s">As the first to begin work on any project, we understand the importance of meticulous execution. Our detailed approach ensures that each site is properly prepared, facilitating a smooth and seamless transition from demolition to the next phase of construction. This attention to detail helps minimize delays and optimizes workflow for all subsequent trades on the job site.</p>
+                                <p id="con_p2" class="con_p wow fadeInUp" data-wow-delay="0.4s">Choose us for your next demolition project, and experience the difference that professionalism, reliability, and exceptional craftsmanship can make.</p>
                                 <a href="about.html" class="con_btn btn_effect wow fadeInUp" data-wow-delay="0.5s">Learn More</a>
                             </div>
                         </div>
