add new banner to landing page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Looking for the best demolition and junk removal service in Ottawa? Whether it is indoors or outdoors, we take care of your junk removal projects. Pool removal, shed removal, material disposal. ">
     <link rel="shortcut icon" href="img/axblogo2.svg" type="image/x-icon">
-    <link rel="preload" fetchpriority="high" href="/img/home-1/slider2.jpg" as="image" type ="image">
+    <link rel="preload" fetchpriority="high" href="/img/home-1/2025-pics/house-2025.jpg.jpg" as="image" type ="image">
     
     <!-- Bootstrap CSS -->
     <style type="text/css">
@@ -391,7 +391,7 @@
                     <div class="row">
                         <div class="col-lg-7">
                             <div class="con_about_img wow fadeInLeft" data-wow-delay="0.2s">
-                                <img data-parallax='{"x": 10, "y": 20}' src="/img/home-1/2025-pics/slider1.jpg" alt="Dump truck disposing its waste material in landfill">
+                                <img data-parallax='{"x": 10, "y": 20}' src="/img/home-1/2025-pics/fleet.jpg" alt="Dump truck disposing its waste material in landfill">
                             </div>
                         </div>
                         <div class="col-lg-5 d-flex align-items-center">
