changed the banner text and formatting / added padding top to .container class

--- a/index.html
+++ b/index.html
@@ -355,10 +355,12 @@
                             <div class="row">
                                 <div class="col-lg-6">
                                     <div class="slider_text_three slider_text_two">
-                                        <h5 data-animation="fadeInUp" data-delay="0.3s">WELCOME TO AxB DEMOLITION AND JUNK REMOVAL</h5>
-                                        <h1 data-animation="fadeInUp" data-delay="0.5s">OTTAWA’S PRIME  DEMOLITION COMPANY</h1>
-                                        <!-- <p data-animation="fadeInUp" data-delay="0.9s"> For quotes please fill out our form to get a formal price  </p> -->
                                         <a href="#quote" class="con_btn btn_effect" data-animation="fadeInRight" data-delay="1.1s">GET A QUOTE</a>
+                                        <h1 data-animation="fadeInUp" data-delay="0.5s">FULL / PARTIAL GUTS</h1>
+                                        <h3 data-animation="fadeInUp" data-delay="0.3s"> ASBESTOS ABATEMENT</h3>
+                                        <h3 data-animation="fadeInUp" data-delay="0.3s">FIRE / WATER REMIDIATION</h3>
+                                        <h3 data-animation="fadeInUp" data-delay="0.3s">IN-GROUND POOL REMOVAL / EXCAVATION</h3>
+                                        <h3 data-animation="fadeInUp" data-delay="0.3s">WASTE AND JUNK REMOVAL</h3>
                                     </div>
                                 </div>
                             </div>
@@ -391,7 +393,7 @@
                     <div class="row">
                         <div class="col-lg-7">
                             <div class="con_about_img wow fadeInLeft" data-wow-delay="0.2s">
-                                <img data-parallax='{"x": 10, "y": 20}' src="/img/home-1/2025-pics/fleet.jpg" alt="Dump truck disposing its waste material in landfill">
+                                <img data-parallax='{"x": 10, "y": 20}' src="/img/home-1/2025-pics/house1.jpg" alt="White house fenced under construction">
                             </div>
                         </div>
                         <div class="col-lg-5 d-flex align-items-center">
