changed about us title to : AXB demolition and junk removal

--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
                                         <a href="#quote" class="con_btn btn_effect" data-animation="fadeInRight" data-delay="1.1s">GET A QUOTE</a>
                                         <h1 data-animation="fadeInUp" data-delay="0.5s">FULL / PARTIAL GUTS</h1>
                                         <h3 data-animation="fadeInUp" data-delay="0.3s"> ASBESTOS ABATEMENT</h3>
-                                        <h3 data-animation="fadeInUp" data-delay="0.3s">FIRE / WATER REMIDIATION</h3>
+                                        <h3 data-animation="fadeInUp" data-delay="0.3s">FIRE / WATER REMEDIATION</h3>
                                         <h3 data-animation="fadeInUp" data-delay="0.3s">IN-GROUND POOL REMOVAL / EXCAVATION</h3>
                                         <h3 data-animation="fadeInUp" data-delay="0.3s">WASTE AND JUNK REMOVAL</h3>
                                     </div>
@@ -399,8 +399,8 @@
                         <div class="col-lg-5 d-flex align-items-center">
                             <div class="con_about_text">
                                 <h6 class="con_title_top wow fadeInUp" data-wow-delay="0.2s" >ABOUT US</h6>
-                                <h2 class="con_title wow fadeInUp" data-wow-delay="0.3s">DEMOLITION & JUNK REMOVAL</h2>
-                                <p class="con_p wow fadeInUp" data-wow-delay="0.4s"> At AxB Demolition, our experienced team specializes in a wide range of demolition services, including full and partial gutting, asbestos removal, fire damage remediation, and thorough construction site cleanups. What sets us apart is our unwavering commitment to precision and quality. </p>
+                                <h2 class="con_title wow fadeInUp" data-wow-delay="0.3s">AXB DEMOLITION & JUNK REMOVAL</h2>
+                                <p class="con_p wow fadeInUp" data-wow-delay="0.4s">Our experienced team specializes in a wide range of demolition services, including full and partial gutting, asbestos removal, fire damage remediation, and thorough construction site cleanups. What sets us apart is our unwavering commitment to precision and quality. </p>
                                 <p id="con_p2" class="con_p wow fadeInUp" data-wow-delay="0.4s">As the first to begin work on any project, we understand the importance of meticulous execution. Our detailed approach ensures that each site is properly prepared, facilitating a smooth and seamless transition from demolition to the next phase of construction. This attention to detail helps minimize delays and optimizes workflow for all subsequent trades on the job site.</p>
                                 <p id="con_p2" class="con_p wow fadeInUp" data-wow-delay="0.4s">Choose us for your next demolition project, and experience the difference that professionalism, reliability, and exceptional craftsmanship can make.</p>
                                 <a href="about.html" class="con_btn btn_effect wow fadeInUp" data-wow-delay="0.5s">Learn More</a>
@@ -414,7 +414,7 @@
                     <div class="section_title text-center wow fadeInUp" data-wow-delay="0.2s">
                         <h6 class="con_title_top">OUR SERVICES</h6>
                         <h2 class="con_title">DEMOLITION & JUNK REMOVAL</h2>
-                        <p class="con_p">Whether it's interior or exterior demolition we do it all. We specialize in the removal of hot tubs, in-ground and above-ground pools, decks, sheds, porches, fences, additions, small houses, barns, bathrooms, kitchens, jacuzzis, fireplace, driveways, fallen trees, pergolas, flooring, interlock and much more. We have the necessary tools and knowledge to make anything disappear and leave you with a clean slate and peace of mind.</p>
+                        <p class="con_p">Whether it's interior or exterior demolition we do it all. We remove hot tubs, in-ground and above-ground pools, decks, sheds, porches, fences, additions, small houses, barns, bathrooms, kitchens, jacuzzis, fireplace, driveways, fallen trees, pergolas, flooring, interlock and much more. We have the necessary tools and knowledge to make anything disappear and leave you with a clean slate and peace of mind.</p>
                     </div>
                     <div class="row">
                         <div class="col-lg-4 col-6 wow fadeInUp" data-wow-delay="0.3s">
