--- a/index.html
+++ b/index.html
@@ -451,9 +451,10 @@
                 <div class="overlay_bg parallax-effect" style="background: url(./img/home-1/video_bg.jpg) no-repeat;"></div>
                 <div class="container">
                     <div class="con_video_content">
-                        <a href="https://www.youtube.com/embed/OM7Muan7JVc" class="video_btn popup-youtube wow fadeIn" data-wow-delay="0.5s">
+                        <iframe class="vid" src="https://www.youtube.com/embed/UPArxzVZNZk" title="AXB Demolition and Junk Removal House Showing" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <!-- <a href="https://www.youtube.com/embed/OM7Muan7JVc" class="video_btn popup-youtube wow fadeIn" data-wow-delay="0.5s">
                             <span></span>
-                        </a>
+                        </a> -->
                         <h2>We Strive to Offer Ottawa the Best <br> Demolition & Junk Removal Service! </h2>
                     </div>
                 </div>
