added new pictures to homepage gallery

--- a/index.html
+++ b/index.html
@@ -451,10 +451,10 @@
                 <div class="overlay_bg parallax-effect" style="background: url(./img/home-1/video_bg.jpg) no-repeat;"></div>
                 <div class="container">
                     <div class="con_video_content">
-                        <iframe class="vid" src="https://www.youtube.com/embed/UPArxzVZNZk" title="AXB Demolition and Junk Removal House Showing" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                        <!-- <a href="https://www.youtube.com/embed/OM7Muan7JVc" class="video_btn popup-youtube wow fadeIn" data-wow-delay="0.5s">
+                        <!-- <iframe class="vid" src="https://www.youtube.com/embed/UPArxzVZNZk" title="AXB Demolition and Junk Removal House Showing" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> -->
+                        <a href="https://www.youtube.com/embed/UPArxzVZNZk?si=_7XjWN0kNXs1XAKO" class="video_btn popup-youtube wow fadeIn" data-wow-delay="0.5s">
                             <span></span>
-                        </a> -->
+                        </a>
                         <h2>We Strive to Offer Ottawa the Best <br> Demolition & Junk Removal Service! </h2>
                     </div>
                 </div>
@@ -502,32 +502,32 @@
 
                         <div class="col-lg-4 col-sm-6 portfolio_item dem">
                             <div class="portfolio_img ">
-                                <img src="img/home-1/project/1.jpg" alt="" class="small-image">
+                                <img src="/img/home-1/2025-pics/prototype.jpg" alt="" class="small-image">
                             </div>
                         </div>
                         <div class="col-lg-4 col-sm-6 portfolio_item design build dem">
                             <div class="portfolio_img ">
-                                <img src="img/home-1/project/2.jpg" alt="" class="small-image">
+                                <img src="img/home-1/2025-pics/fleet.jpg" alt="" class="small-image">
                             </div>
                         </div>
                         <div class="col-lg-4 col-sm-6 portfolio_item junk design">
                             <div class="portfolio_img ">
-                                <img src="img/home-1/project/3.jpg" alt="" class="small-image">
+                                <img src="img/home-1/2025-pics/house2.jpg" alt="" class="small-image">
                             </div>
                         </div>
                         <div class="col-lg-4 col-sm-6 portfolio_item junk dem">
                             <div class="portfolio_img ">
-                                <img src="img/home-1/project/4.jpg" alt="" class="small-image">
+                                <img src="img/home-1/2025-pics/junk-carry.jpg" alt="" class="small-image">
                             </div>
                         </div>
                         <div class="col-lg-4 col-sm-6 portfolio_item design junk">
                             <div class="portfolio_img ">
-                                <img src="img/home-1/project/5.jpg" alt="" class="small-image">
+                                <img src="img/home-1/2025-pics/room-bare.jpg" alt="" class="small-image">
                             </div>
                         </div>
                         <div class="col-lg-4 col-sm-6 portfolio_item build">
                             <div class="portfolio_img ">
-                                <img src="img/home-1/project/6.jpg" alt="" class="small-image">
+                                <img src="img/home-1/2025-pics/asbestos.jpg" alt="" class="small-image">
                             </div>
                         </div>
                     </div>
