--- a/portfolio.html
+++ b/portfolio.html
@@ -99,7 +99,68 @@
                         <div data-filter=".shed" class="work_portfolio_item">SHED REMOVAL</div>
                     </div>
                     <div class="row portfolio_gallery" id="work-portfolio">
+                        
 
+                        <div class="col-lg-4 col-sm-6 portfolio_item con pool">
+                            <div class="portfolio_img">
+                                <img src="img/home-1/2025-pics/pool-gut.jpg" alt="picture of a pool after being cleaned up" class="small-image">
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-sm-6 portfolio_item con dem">
+                            <div class="portfolio_img">
+                                <img src="img/home-1/2025-pics/prototype.jpg" alt="Branded truck with logo" class="small-image">
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-sm-6 portfolio_item con junk">
+                            <div class="portfolio_img">
+                                <img src="img/home-1/2025-pics/fleet.jpg" alt="Picture of a fleet of trucks and work equipment" class="small-image">
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-sm-6 portfolio_item con junk">
+                            <div class="portfolio_img">
+                                <img src="img/home-1/2025-pics/asbestos.jpg" alt="Ad on asbestos treatment and services" class="small-image">
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-sm-6 portfolio_item con dem">
+                            <div class="portfolio_img">
+                                <img src="img/home-1/2025-pics/house3.jpg" alt="Red brick house with AXB logo" class="small-image">
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-sm-6 portfolio_item con shed junk">
+                            <div class="portfolio_img">
+                                <img src="img/home-1/2025-pics/stairs.jpg" alt="basement stairs gutted" class="small-image">
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-sm-6 portfolio_item con shed">
+                            <div class="portfolio_img">
+                                <img src="img/home-1/2025-pics/banner2025.JPG" alt="Red brick house with AXB logo" class="small-image">
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-sm-6 portfolio_item con dem">
+                            <div class="portfolio_img">
+                                <img src="img/home-1/2025-pics/house1.jpg" alt="White house fenced by contruction" class="small-image">
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-sm-6 portfolio_item con junk">
+                            <div class="portfolio_img">
+                                <img src="img/home-1/2025-pics/junk-carry.jpg" alt="tractor emptying junk" class="small-image">
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-sm-6 portfolio_item con dem">
+                            <div class="portfolio_img">
+                                <img src="img/home-1/2025-pics/attic.jpg" alt="attic" class="small-image">
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-sm-6 portfolio_item con dem">
+                            <div class="portfolio_img">
+                                <img src="img/home-1/2025-pics/stairs2.jpg" alt="stairs" class="small-image">
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-sm-6 portfolio_item con junk">
+                            <div class="portfolio_img">
+                                <img src="img/home-1/2025-pics/junk-basement.jpg" alt="junk basement" class="small-image">
+                            </div>
+                        </div>
                         <div class="col-lg-4 col-sm-6 portfolio_item con dem">
                             <div class="portfolio_img">
                                 <img src="img/home-1/project2/31.webp" alt="demolition truck" class="small-image">
