added second video to landing page

--- a/index.html
+++ b/index.html
@@ -561,6 +561,18 @@
                 </div>
             </section>
 
+            <section class="con_video_area">
+                <div class="overlay_bg parallax-effect" style="background: url(./img/home-1/2025-pics/fleet.webp) no-repeat;"></div>
+                <div class="container">
+                    <div class="con_video_content">
+                        <!-- <iframe class="vid" src="https://www.youtube.com/embed/Ua-Ack3kIvA" title="AXB Demolition and Junk Removal House Showing" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> -->
+                        <a href="https://www.youtube.com/embed/Ua-Ack3kIvA" class="video_btn popup-youtube wow fadeIn" data-wow-delay="0.5s">
+                            <span></span>
+                        </a>
+                    </div>
+                </div>
+            </section>
+
             <section class="con_team_area_two sec_gap bg_color">
                 <div class="container">
                     <div class="section_title text-center wow fadeInUp" data-wow-delay="0.2s">
